recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:16: error: not found: value draoite
    draoite(90)
    ^