recursion.logo.square.FourSquare.scala.code
override def run() {
  
  def draw_rect():Int={
    
    baisseCrayon();
    
    for (i <- 1 to 4){
      avance(100);
      droite(90);
    }
		return 0;
  }
  
  for (i <-1 to 4) {
    draw_rect();
    draoite(90)
    
  }
  
  leveCrayon();
  
}